# CudaWelford

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
CudaWelford/: CMakeLists.txt
CudaWelford/include/: cub_sum.h  cub_welford.h  cuda_welford.h  example_device_reduce.h  test_util.h
CudaWelford/src/: cub_sum.cu  cub_welford.cu  cuda_prog.cu  cuda_prog_all.cu  cuda_welford.cu  example_device_reduce.cu  half.h  mersenne.h  test_util.cpp  test_util.h
CudaWelford/test/: CMakeLists.txt  test_cuda.cpp
